# millimap-mcp

./: LICENSE  README.md  pyproject.toml
src/millimap_mcp/: __init__.py  server.py
