[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "millimap-mcp"
version = "0.1.0"
description = "MCP server that exposes the active MilliMap session to Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "See MilliMap LICENSE" }
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
millimap-mcp = "millimap_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
